# mongodb-markov

./: pyproject.toml
mongodb_markov/: __init__.py  mongodb_markov.py
